packages/k8s/base/backend/ingress.yml
# INGRESS SETUP
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crate-backend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "500m"
spec:
  tls:
    - hosts:
        - crate.network
        - gateway.crate.network
      secretName: crate-tls
  rules:
    - host: crate.network
      http:
        paths:
          - pathType: Prefix
            path: "/ipfs/"
            backend:
              service:
                name: ipfs-ipfs-ipfs-cluster
                port:
                  number: 8080
          - pathType: Prefix
            path: "/ipns/"
            backend:
              service:
                name: ipfs-ipfs-ipfs-cluster
                port:
                  number: 8080
          - pathType: Prefix
            path: "/api/v1/"
            backend:
              service:
                name: server
                port:
                  number: 80
    - host: gateway.crate.network
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ipfs-ipfs-ipfs-cluster
                port:
                  number: 8080
